fixed bug "Color field of request type is too small"

--- a/developer-portal-ui/src/pages/test-cases/components/play-with-data/play-wth-data.component.scss
+++ b/developer-portal-ui/src/pages/test-cases/components/play-with-data/play-wth-data.component.scss
@@ -51,7 +51,6 @@
     }
   }
   .line-command-wrapper {
-    width: 4vw;
     display: flex;
     align-items: center;
     justify-content: center;
